fixed layer problem with z-index

--- a/public/style.css
+++ b/public/style.css
@@ -22,19 +22,22 @@ h1 {
 canvas {
 	margin:0;
 	border:0;
+	padding: 0;
 }
 
 #canvas-wrapper {
 	position: relative;
+	z-index: 0;
 }
 
 #menu {
 	display: block;
-	position: absolute;
+	position: fixed;
 	width: 20%;
 	height: 100%;
 	right: 0;
 	background-color: rgba(255, 255, 255, 0.9);
+	z-index:2;
 }
 
 .menu-item {
@@ -56,6 +59,10 @@ canvas {
 	font-size: 12px;
 	line-height: 15px;
 }
+#so-true,
+#nah {
+	cursor: pointer;
+}
 #nah {
 	opacity: 0.3;
 }
@@ -70,6 +77,7 @@ canvas {
   text-align: center;
   border: 2px solid rgba(255,255,255,0.3);
   border-radius: 50%;
+  pointer-events: none;
 }
 #cursor span {
 	display: block;
@@ -100,5 +108,11 @@ canvas {
 	height: 60px;
 	border: 1px solid black;
 	border-radius: 50%;
+}
+
+#true-circle,
+#nah-circle {
+	background-color: white;
+	box-shadow: 3px 3px;
 }
 
